--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "TBD"
+    "url": "https://github.com/ErikHusgafvel/osa4_blogilista"
   },
   "author": "Erik Husgafvel",
   "license": "MIT",
