--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.8"
   },
   "jest": {
