--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.1.8",
-    "mongoose-unique-validator": "^3.0.0"
+    "mongoose": "^6.1.8"
   },
   "jest": {
     "testEnvironment": "node"
